--- a/companies-app/src/styles/components/_company-form.scss
+++ b/companies-app/src/styles/components/_company-form.scss
@@ -77,5 +77,17 @@
         color: $primary-color;
       }
     }
-  }
+    button:last-child {
+      background: #fff;
+      color: $primary-color;
+      border: 1.5px solid $primary-color;
+      transition: background 0.2s, color 0.2s, border-color 0.2s;
+
+      &:hover {
+        background: $secondary-color;
+        color: #fff;
+        border-color: darken($primary-color, 10%);
+      }
+    }
+}
 }
