--- a/companies-app/src/styles/base/_colors.scss
+++ b/companies-app/src/styles/base/_colors.scss
@@ -1,74 +1,74 @@
-@import 'variables';
+@use 'variables';
 
 // Brand Colors
 .primary {
-  color: $primary-color !important;
+  color: variables.$primary-color !important;
 }
 .secondary {
-  color: $secondary-color !important;
+  color: variables.$secondary-color !important;
 }
 .success {
-  color: $success-color !important;
+  color: variables.$success-color !important;
 }
 .warning {
-  color: $warning-color !important;
+  color: variables.$warning-color !important;
 }
 
 // Backgrounds
 .bg-white {
-  background: $white !important;
+  background: variables.$white !important;
 }
 .bg-light {
-  background: $background-light !important;
+  background: variables.$background-light !important;
 }
 .bg-grey {
-  background: $background-grey !important;
+  background: variables.$background-grey !important;
 }
 .bg-info {
-  background: $background-info !important;
+  background: variables.$background-info !important;
 }
 .bg-primary {
-  background: $primary-color !important;
+  background: variables.$primary-color !important;
 }
 .bg-secondary {
-  background: $secondary-color !important;
+  background: variables.$secondary-color !important;
 }
 
 // Borders
 .border {
-  border: 1px solid $border-color !important;
+  border: 1px solid variables.$border-color !important;
 }
 .border-dark {
-  border: 1px solid $border-color-dark !important;
+  border: 1px solid variables.$border-color-dark !important;
 }
 .border-radius-lg {
-  border-radius: $radius-lg !important;
+  border-radius: variables.$radius-lg !important;
 }
 .border-radius-md {
-  border-radius: $radius-md !important;
+  border-radius: variables.$radius-md !important;
 }
 .border-radius-sm {
-  border-radius: $radius-sm !important;
+  border-radius: variables.$radius-sm !important;
 }
 .border-radius-circle {
-  border-radius: $radius-circle !important;
+  border-radius: variables.$radius-circle !important;
 }
 
 // Shadows
 .shadow {
-  box-shadow: 0px 1px 2px $shadow-color !important;
+  box-shadow: 0px 1px 2px variables.$shadow-color !important;
 }
 .shadow-dark {
-  box-shadow: 0px 1px 2px $shadow-dark !important;
+  box-shadow: 0px 1px 2px variables.$shadow-dark !important;
 }
 
 // Utility text colors
 .text-font {
-  color: $font-color !important;
+  color: variables.$font-color !important;
 }
 .text-disabled {
-  color: $font-color-disabled !important;
+  color: variables.$font-color-disabled !important;
 }
 .text-subtle {
-  color: $font-color-subtle !important;
+  color: variables.$font-color-subtle !important;
 }
