--- a/companies-app/src/styles/components/_navbar.scss
+++ b/companies-app/src/styles/components/_navbar.scss
@@ -1,22 +1,22 @@
-@import '../base/variables';
+@use '../base/variables';
 
 // Navbar Styles
 
 .navbar {
-  background: $white;
+  background: variables.$white;
   border-bottom: 1px solid #eee;
   padding: 10px 24px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   min-height: 56px;
-  box-shadow: 0px 1px 2px $shadow-color;
-  z-index: $z-navbar;
+  box-shadow: 0px 1px 2px variables.$shadow-color;
+  z-index: variables.$z-navbar;
 
   a,
   .router-link {
-    color: $primary-color;
-    font-family: $font-main;
+    color: variables.$primary-color;
+    font-family: variables.$font-main;
     font-size: 1rem;
     font-weight: 500;
     margin-right: 16px;
@@ -24,7 +24,7 @@
     transition: color 0.2s;
 
     &:hover {
-      color: $secondary-color;
+      color: variables.$secondary-color;
     }
   }
 }
